# ci-info

./: .gitattributes  .gitignore  .travis.yml  CHANGES.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: test.yml
ci/: __init__.py  _version.py
ci/tests/: test_travis.py
ci_info/: __init__.py  _version.py
ci_info/tests/: test_circle.py  test_gha.py  test_travis.py
tests/: test_all.py  test_circle.py  test_gha.py  test_travis.py
