[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ci-info"
dynamic = ["version"]
description = "Continuous Integration Information"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Mathias Goncalves", email = "mathiasg@stanford.edu" }
]
urls = { Homepage = "https://github.com/mgxd/ci-info" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = ["pytest"]
tests = ["pytest"]
all = ["pytest"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["ci_info"]
