[metadata]
url = https://github.com/mgxd/ci-info
author = Mathias Goncalves
author_email = mathiasg@mit.edu
description = Continuous Integration Information
license = MIT
provides =
    ci
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 2.7
install_requires =
test_requires =
    pytest >= 4.4.0
    pytest-cov
    codecov
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest
    pytest-cov
    codecov
tests =
    %(test)s
all =
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = ci/_version.py
versionfile_build = ci/_version.py
tag_prefix =
parentdir_prefix =
