[metadata]
url = https://github.com/mgxd/ci-info
author = Mathias Goncalves
author_email = mathiasg@mit.edu
description = Continuous Integration Information
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
provides =
    ci
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.5
test_requires =
    pytest
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest
tests =
    %(test)s
all =
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = ci/_version.py
versionfile_build = ci/_version.py
tag_prefix =
parentdir_prefix =
